--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.79.0",
+    "axios": "^1.9.0",
+    "bootstrap": "^5.3.6",
+    "clsx": "^2.1.1",
     "dynamic-import-polyfill": "^0.1.1",
     "firebase": "^11.8.1",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0"
   },
